ingress/external-services-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: caliopen-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true" 
    kubernetes.io/ingress.class: "external"
spec:
  rules:
  - host: www.caliopen.app
    http: &front_rules
      paths:
      - backend:
          serviceName: frontend
          servicePort: 4000
  - host: web.caliopen.app
    http: *front_rules
  - host: caliopen.app
    http: *front_rules
  - host: api.caliopen.app
    http:
      paths:
        - path: /api/v1/?.*
          backend:
            serviceName: apiv1
            servicePort: 6543
        - path: /api/v2/?.*
          backend:
            serviceName: apiv2
            servicePort: 6544
