ingress/monitoring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  annotations:
    kubernetes.io/ingress.class: "external"
spec:
  rules:
  - host: grafana.monitor.caliopen.org
    http:
      paths:
        - backend:
            serviceName: grafana
            servicePort: 3000
  # - host: kibana.monitor.caliopen.org
  #   http:
  #     paths:
  #       - backend:
  #           serviceName: kibana
  #           servicePort: 5601
